Toggle the close/open session.